<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0a">0</string>
    <string name="_3_pointsa">+3 points</string>
    <string name="_2_pointsa">+2 points</string>
    <string name="free_throwa">free throw</string>
    <string name="team_b">Team B</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="free_throw">free throw</string>
    <string name="result">result</string>
    <string name="reset">reset</string>
</resources>